# optisweepAI-ingestion

./: .gitignore  README.md  pyproject.toml
cursorprompts/: directory_readme_prompt.md
cursorprompts/incidence_ingestion_prompts/: incidence_ingestion_prompt  new_incidence_ingestion_prompt.md
cursorprompts/manual_ingestion_prompts/: manual_ingestion_plan.md  stage1promt.md  stage2prompt.md  stage3prompt.md  stage4prompt.md  stage5prompt.md  stage6prompt.md  video_training_prompt.md
docs/: data_contracts.md  development_log.md  development_status.md  ingestion_plan.md  operational_knowledge_pipeline_architecture.md
docs/design_decisions/: README.md  changes.txt  runbook_candidate_pool_and_azure_review_design.md  stage_5_6_playbook_extraction_modes.md  stage_5_7_runbook_architecture.md
incidenceknowledgeingestion/: README.md
operationalknowledgeingestion/: README.md  pyproject.toml
scripts/: build_candidate_pool.py  enrich_source_artifacts.py  extract_manual.py  extract_manual_artifacts.py  extract_operational_context.py  extract_runbook_candidates.py  inspect_output.py  migrate_source_lineage.py  stage6_5_build_runbook_pool.py  update_readme.py  validate_output.py
shared/: stage_prompts.py
shared_pipeline_stages/: README.md
sme_review_runbooks/: README.md
stage_prompts/: README.md
tests/: test_artifact_enricher.py  test_artifact_extractor.py  test_candidate_pool_builder.py  test_operational_context_extractor.py  test_project_structure.py  test_runbook_candidate_extractor.py  test_source_bundle_builder.py  test_update_readme.py  test_validators.py
(+1512 files in other folders)
