[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optisweep-ingestion"
version = "0.1.0"
description = "Local data ingestion scaffold for OptiSweep knowledge sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "python-dotenv",
  "typer",
  "rich",
]

[tool.setuptools.packages.find]
where = ["src"]

# Future optional dependencies may include:
# - langgraph
# - langchain-openai
# - pymupdf
# - pdfplumber
